change a href to fix bug on mobile

--- a/src/Components/Intro/Intro.css
+++ b/src/Components/Intro/Intro.css
@@ -43,6 +43,18 @@
   height: 2rem;
 }
 
+.i-button > a:any-link {
+  text-decoration: none;
+  color: white;
+  font-size: 16px;
+}
+
+.i-button:hover > a:any-link {
+  text-decoration: none;
+  font-weight: bold;
+  color: var(--darkPink);
+}
+
 .i-icons{
   margin-top: 2rem;
   display: flex;
@@ -108,6 +120,11 @@
     background: transparent;
     border-radius: 20px;
     box-shadow: 12px 12px 2px 1px var(--darkPink);
+    z-index: 1;
+  }
+
+  .i-button{
+    z-index: 2;
   }
   
   .i-right{
